--- a/phpstan-with-extension.neon
+++ b/phpstan-with-extension.neon
@@ -4,6 +4,7 @@ includes:
 
 parameters:
 	inferPrivatePropertyTypeFromConstructor: true
+	reportUnmatchedIgnoredErrors: false
 	level: max
 	paths:
 		- src/
