--- a/phpstan-without-extension.neon
+++ b/phpstan-without-extension.neon
@@ -3,6 +3,7 @@ includes:
 
 parameters:
 	inferPrivatePropertyTypeFromConstructor: true
+	reportUnmatchedIgnoredErrors: false
 	level: max
 	paths:
 		- src/
