--- a/extension.neon
+++ b/extension.neon
@@ -9,18 +9,18 @@ services:
 		tags:
 			- phpstan.broker.dynamicMethodReturnTypeExtension
 
-	-
-		class: JanGregor\Prophecy\Type\Prophet\ProphesizeDynamicReturnTypeExtension
-		arguments:
-			className: Prophecy\Prophet
-		autowired: false
-		tags:
-			- phpstan.broker.dynamicMethodReturnTypeExtension
+	# -
+	# 	class: JanGregor\Prophecy\Type\Prophet\ProphesizeDynamicReturnTypeExtension
+	# 	arguments:
+	# 		className: Prophecy\Prophet
+	# 	autowired: false
+	# 	tags:
+	# 		- phpstan.broker.dynamicMethodReturnTypeExtension
 
-	-
-		class: JanGregor\Prophecy\Type\Prophet\ProphesizeDynamicReturnTypeExtension
-		arguments:
-			className: PHPUnit\Framework\TestCase
-		autowired: false
-		tags:
-			- phpstan.broker.dynamicMethodReturnTypeExtension
+	# -
+	# 	class: JanGregor\Prophecy\Type\Prophet\ProphesizeDynamicReturnTypeExtension
+	# 	arguments:
+	# 		className: PHPUnit\Framework\TestCase
+	# 	autowired: false
+	# 	tags:
+	# 		- phpstan.broker.dynamicMethodReturnTypeExtension
